// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createSuggestionEngine passes custom entries to Engine 1`] = `
Array [
  Object {
    "datumTokenizer": [Function],
    "local": Array [
      "USSR",
      "Union of Soviet Socialist Republics",
      "SU",
      "Germany",
      "The Federal Republic of Germany",
      "DE",
      "East Germany",
      "Germany Democratic Republic",
      "DD",
      "Yugoslavia",
      "Socialist Federal Republic of Yugoslavia",
      "YU",
      "Czechoslovakia",
      "Czechoslovak Republic",
      "CS",
      "United Kingdom",
      "The United Kingdom of Great Britain and Northern Ireland",
      "GB",
      "Afghanistan",
      "The Islamic Republic of Afghanistan",
      "AF",
      "Albania",
      "The Republic of Albania",
      "AL",
      "Algeria",
      "The People's Democratic Republic of Algeria",
      "DZ",
      "Andorra",
      "The Principality of Andorra",
      "AD",
      "Angola",
      "The Republic of Angola",
      "AO",
      "Antigua and Barbuda",
      "AG",
      "Argentina",
      "The Argentine Republic",
      "AR",
      "Armenia",
      "The Republic of Armenia",
      "AM",
      "Australia",
      "The Commonwealth of Australia",
      "AU",
      "Austria",
      "The Republic of Austria",
      "AT",
      "Azerbaijan",
      "The Republic of Azerbaijan",
      "AZ",
      "The Bahamas",
      "The Commonwealth of The Bahamas",
      "BS",
      "Bahrain",
      "The Kingdom of Bahrain",
      "BH",
      "Bangladesh",
      "The People's Republic of Bangladesh",
      "BD",
      "Barbados",
      "BB",
      "Belarus",
      "The Republic of Belarus",
      "BY",
      "Belgium",
      "The Kingdom of Belgium",
      "BE",
      "Belize",
      "BZ",
      "Benin",
      "The Republic of Benin",
      "BJ",
      "Bhutan",
      "The Kingdom of Bhutan",
      "BT",
      "Bolivia",
      "The Plurinational State of Bolivia",
      "BO",
      "Bosnia and Herzegovina",
      "BA",
      "Botswana",
      "The Republic of Botswana",
      "BW",
      "Brazil",
      "The Federative Republic of Brazil",
      "BR",
      "Brunei",
      "Brunei Darussalam",
      "BN",
      "Bulgaria",
      "The Republic of Bulgaria",
      "BG",
      "Burkina Faso",
      "BF",
      "Burma",
      "The Republic of the Union of Myanmar",
      "MM",
      "Burundi",
      "The Republic of Burundi",
      "BI",
      "Cambodia",
      "The Kingdom of Cambodia",
      "KH",
      "Cameroon",
      "The Republic of Cameroon",
      "CM",
      "Canada",
      "CA",
      "Cape Verde",
      "The Republic of Cabo Verde",
      "CV",
      "Central African Republic",
      "The Central African Republic",
      "CF",
      "Chad",
      "The Republic of Chad",
      "TD",
      "Chile",
      "The Republic of Chile",
      "CL",
      "China",
      "The People's Republic of China",
      "CN",
      "Colombia",
      "The Republic of Colombia",
      "CO",
      "Comoros",
      "The Union of the Comoros",
      "KM",
      "Congo",
      "The Republic of the Congo",
      "CG",
      "Congo (Democratic Republic)",
      "The Democratic Republic of the Congo",
      "CD",
      "Costa Rica",
      "The Republic of Costa Rica",
      "CR",
      "Croatia",
      "The Republic of Croatia",
      "HR",
      "Cuba",
      "The Republic of Cuba",
      "CU",
      "Cyprus",
      "The Republic of Cyprus",
      "CY",
      "Czechia",
      "The Czech Republic",
      "CZ",
      "Denmark",
      "The Kingdom of Denmark",
      "DK",
      "Djibouti",
      "The Republic of Djibouti",
      "DJ",
      "Dominica",
      "The Commonwealth of Dominica",
      "DM",
      "Dominican Republic",
      "The Dominican Republic",
      "DO",
      "East Timor",
      "The Democratic Republic of Timor-Leste",
      "TL",
      "Ecuador",
      "The Republic of Ecuador",
      "EC",
      "Egypt",
      "The Arab Republic of Egypt",
      "EG",
      "El Salvador",
      "The Republic of El Salvador",
      "SV",
      "Equatorial Guinea",
      "The Republic of Equatorial Guinea",
      "GQ",
      "Eritrea",
      "The State of Eritrea",
      "ER",
      "Estonia",
      "The Republic of Estonia",
      "EE",
      "Ethiopia",
      "The Federal Democratic Republic of Ethiopia",
      "ET",
      "Fiji",
      "The Republic of Fiji",
      "FJ",
      "Finland",
      "The Republic of Finland",
      "FI",
      "France",
      "The French Republic",
      "FR",
      "Gabon",
      "The Gabonese Republic",
      "GA",
      "The Gambia",
      "The Islamic Republic of The Gambia",
      "GM",
      "Georgia",
      "GE",
      "Ghana",
      "The Republic of Ghana",
      "GH",
      "Greece",
      "The Hellenic Republic",
      "GR",
      "Grenada",
      "GD",
      "Guatemala",
      "The Republic of Guatemala",
      "GT",
      "Guinea",
      "The Republic of Guinea",
      "GN",
      "Guinea-Bissau",
      "The Republic of Guinea-Bissau",
      "GW",
      "Guyana",
      "The Co-operative Republic of Guyana",
      "GY",
      "Haiti",
      "The Republic of Haiti",
      "HT",
      "Honduras",
      "The Republic of Honduras",
      "HN",
      "Hungary",
      "HU",
      "Iceland",
      "The Republic of Iceland",
      "IS",
      "India",
      "The Republic of India",
      "IN",
      "Indonesia",
      "The Republic of Indonesia",
      "ID",
      "Iran",
      "The Islamic Republic of Iran",
      "IR",
      "Iraq",
      "The Republic of Iraq",
      "IQ",
      "Ireland",
      "IE",
      "Israel",
      "The State of Israel",
      "IL",
      "Italy",
      "The Italian Republic",
      "IT",
      "Ivory Coast",
      "The Republic of Cote D'Ivoire",
      "CI",
      "Jamaica",
      "JM",
      "Japan",
      "JP",
      "Jordan",
      "The Hashemite Kingdom of Jordan",
      "JO",
      "Kazakhstan",
      "The Republic of Kazakhstan",
      "KZ",
      "Kenya",
      "The Republic of Kenya",
      "KE",
      "Kiribati",
      "The Republic of Kiribati",
      "KI",
      "North Korea",
      "The Democratic People's Republic of Korea",
      "KP",
      "South Korea",
      "The Republic of Korea",
      "KR",
      "Kosovo",
      "The Republic of Kosovo",
      "XK",
      "Kuwait",
      "The State of Kuwait",
      "KW",
      "Kyrgyzstan",
      "The Kyrgyz Republic",
      "KG",
      "Laos",
      "The Lao People's Democratic Republic",
      "LA",
      "Latvia",
      "The Republic of Latvia",
      "LV",
      "Lebanon",
      "The Lebanese Republic",
      "LB",
      "Lesotho",
      "The Kingdom of Lesotho",
      "LS",
      "Liberia",
      "The Republic of Liberia",
      "LR",
      "Libya",
      "LY",
      "Liechtenstein",
      "The Principality of Liechtenstein",
      "LI",
      "Lithuania",
      "The Republic of Lithuania",
      "LT",
      "Luxembourg",
      "The Grand Duchy of Luxembourg",
      "LU",
      "Macedonia",
      "The Republic of Macedonia",
      "MK",
      "Madagascar",
      "The Republic of Madagascar",
      "MG",
      "Malawi",
      "The Republic of Malawi",
      "MW",
      "Malaysia",
      "MY",
      "Maldives",
      "The Republic of Maldives",
      "MV",
      "Mali",
      "The Republic of Mali",
      "ML",
      "Malta",
      "The Republic of Malta",
      "MT",
      "Marshall Islands",
      "The Republic of the Marshall Islands",
      "MH",
      "Mauritania",
      "The Islamic Republic of Mauritania",
      "MR",
      "Mauritius",
      "The Republic of Mauritius",
      "MU",
      "Mexico",
      "The United Mexican States",
      "MX",
      "Micronesia",
      "The Federated States of Micronesia",
      "FM",
      "Moldova",
      "The Republic of Moldova",
      "MD",
      "Monaco",
      "The Principality of Monaco",
      "MC",
      "Mongolia",
      "MN",
      "Montenegro",
      "ME",
      "Morocco",
      "The Kingdom of Morocco",
      "MA",
      "Mozambique",
      "The Republic of Mozambique",
      "MZ",
      "Namibia",
      "The Republic of Namibia",
      "NA",
      "Nauru",
      "The Republic of Nauru",
      "NR",
      "Nepal",
      "The Federal Democratic Republic of Nepal",
      "NP",
      "Netherlands",
      "The Kingdom of the Netherlands",
      "NL",
      "New Zealand",
      "NZ",
      "Nicaragua",
      "The Republic of Nicaragua",
      "NI",
      "Niger",
      "The Republic of Niger",
      "NE",
      "Nigeria",
      "The Federal Republic of Nigeria",
      "NG",
      "Norway",
      "The Kingdom of Norway",
      "NO",
      "Oman",
      "The Sultanate of Oman",
      "OM",
      "Pakistan",
      "The Islamic Republic of Pakistan",
      "PK",
      "Palau",
      "The Republic of Palau",
      "PW",
      "Panama",
      "The Republic of Panama",
      "PA",
      "Papua New Guinea",
      "The Independent State of Papua New Guinea",
      "PG",
      "Paraguay",
      "The Republic of Paraguay",
      "PY",
      "Peru",
      "The Republic of Peru",
      "PE",
      "Philippines",
      "The Republic of the Philippines",
      "PH",
      "Poland",
      "The Republic of Poland",
      "PL",
      "Portugal",
      "The Portuguese Republic",
      "PT",
      "Qatar",
      "The State of Qatar",
      "QA",
      "Romania",
      "RO",
      "Russia",
      "The Russian Federation",
      "RU",
      "Rwanda",
      "The Republic of Rwanda",
      "RW",
      "St Kitts and Nevis",
      "The Federation of Saint Christopher and Nevis",
      "KN",
      "St Lucia",
      "Saint Lucia",
      "LC",
      "St Vincent",
      "Saint Vincent and the Grenadines",
      "VC",
      "Samoa",
      "The Independent State of Samoa",
      "WS",
      "San Marino",
      "The Republic of San Marino",
      "SM",
      "Sao Tome and Principe",
      "The Democratic Republic of Sao Tome and Principe",
      "ST",
      "Saudi Arabia",
      "The Kingdom of Saudi Arabia",
      "SA",
      "Senegal",
      "The Republic of Senegal",
      "SN",
      "Serbia",
      "The Republic of Serbia",
      "RS",
      "Seychelles",
      "The Republic of Seychelles",
      "SC",
      "Sierra Leone",
      "The Republic of Sierra Leone",
      "SL",
      "Singapore",
      "The Republic of Singapore",
      "SG",
      "Slovakia",
      "The Slovak Republic",
      "SK",
      "Slovenia",
      "The Republic of Slovenia",
      "SI",
      "Solomon Islands",
      "SB",
      "Somalia",
      "Federal Republic of Somalia",
      "SO",
      "South Africa",
      "The Republic of South Africa",
      "ZA",
      "South Sudan",
      "The Republic of South Sudan",
      "SS",
      "Spain",
      "The Kingdom of Spain",
      "ES",
      "Sri Lanka",
      "The Democratic Socialist Republic of Sri Lanka",
      "LK",
      "Sudan",
      "The Republic of the Sudan",
      "SD",
      "Suriname",
      "The Republic of Suriname",
      "SR",
      "Swaziland",
      "The Kingdom of Swaziland",
      "SZ",
      "Sweden",
      "The Kingdom of Sweden",
      "SE",
      "Switzerland",
      "The Swiss Confederation",
      "CH",
      "Syria",
      "The Syrian Arab Republic",
      "SY",
      "Tajikistan",
      "The Republic of Tajikistan",
      "TJ",
      "Tanzania",
      "The United Republic of Tanzania",
      "TZ",
      "Thailand",
      "The Kingdom of Thailand",
      "TH",
      "Togo",
      "The Togolese Republic",
      "TG",
      "Tonga",
      "The Kingdom of Tonga",
      "TO",
      "Trinidad and Tobago",
      "The Republic of Trinidad and Tobago",
      "TT",
      "Tunisia",
      "The Tunisian Republic",
      "TN",
      "Turkey",
      "The Republic of Turkey",
      "TR",
      "Turkmenistan",
      "TM",
      "Tuvalu",
      "TV",
      "Uganda",
      "The Republic of Uganda",
      "UG",
      "Ukraine",
      "UA",
      "United Arab Emirates",
      "The United Arab Emirates",
      "AE",
      "United States",
      "The United States of America",
      "US",
      "Uruguay",
      "The Oriental Republic of Uruguay",
      "UY",
      "Uzbekistan",
      "The Republic of Uzbekistan",
      "UZ",
      "Vanuatu",
      "The Republic of Vanuatu",
      "VU",
      "Vatican City",
      "Vatican City State",
      "VA",
      "Venezuela",
      "The Bolivarian Republic of Venezuela",
      "VE",
      "Vietnam",
      "The Socialist Republic of Vietnam",
      "VN",
      "Yemen",
      "The Republic of Yemen",
      "YE",
      "Zambia",
      "The Republic of Zambia",
      "ZM",
      "Zimbabwe",
      "The Republic of Zimbabwe",
      "ZW",
      "Abu Dhabi",
      "Emirate of Abu Dhabi",
      "AE-AZ",
      "Ascension",
      "Ascension Island",
      "SH-AC",
      "Ajman",
      "Emirate of Ajman",
      "AE-AJ",
      "Akrotiri",
      "Sovereign Base Areas of Akrotiri and Dhekelia",
      "XQZ",
      "Åland Islands",
      "AX",
      "American Samoa",
      "Territory of American Samoa",
      "AS",
      "Anguilla",
      "AI",
      "Antarctica",
      "AQ",
      "Aruba",
      "AW",
      "Baker Island",
      "UM-81",
      "Bermuda",
      "BM",
      "Bonaire",
      "BQ-BO",
      "Bouvet Island",
      "BV",
      "British Antarctic Territory",
      "BAT",
      "British Indian Ocean Territory",
      "The British Indian Ocean Territory",
      "IO",
      "British Virgin Islands",
      "The Virgin Islands",
      "VG",
      "Cayman Islands",
      "KY",
      "Christmas Island",
      "Territory of Christmas Island",
      "CX",
      "Cocos (Keeling) Islands",
      "Territory of the Cocos (Keeling) Islands",
      "CC",
      "Cook Islands",
      "CK",
      "Ceuta",
      "ES-CE",
      "Curaçao",
      "Country of Curaçao",
      "CW",
      "Dhekelia",
      "XXD",
      "Dubai",
      "Emirate of Dubai",
      "AE-DU",
      "Falkland Islands",
      "FK",
      "Faroe Islands",
      "FO",
      "French Guiana",
      "GF",
      "French Polynesia",
      "PF",
      "French Southern Territories",
      "TF",
      "Fujairah",
      "Emirate of Fujairah",
      "AE-FU",
      "Gibraltar",
      "GI",
      "Greenland",
      "GL",
      "Guadeloupe",
      "GP",
      "Guam",
      "Territory of Guam",
      "GU",
      "Guernsey",
      "Bailiwick of Guernsey",
      "GG",
      "Heard Island and McDonald Islands",
      "Territory of Heard Island and McDonald Islands",
      "HM",
      "Hong Kong",
      "Hong Kong Special Administrative Region",
      "HK",
      "Howland Island",
      "UM-84",
      "Isle of Man",
      "IM",
      "Jarvis Island",
      "UM-86",
      "Jersey",
      "Bailiwick of Jersey",
      "JE",
      "Johnston Atoll",
      "UM-67",
      "Kingman Reef",
      "UM-89",
      "Macao",
      "Macao Special Administrative Region",
      "MO",
      "Martinique",
      "MQ",
      "Mayotte",
      "YT",
      "Melilla",
      "ES-ML",
      "Midway Islands",
      "UM-71",
      "Montserrat",
      "MS",
      "Navassa Island",
      "UM-76",
      "New Caledonia",
      "NC",
      "Niue",
      "NU",
      "Norfolk Island",
      "Territory of Norfolk Island",
      "NF",
      "Northern Mariana Islands",
      "Commonwealth of the Northern Mariana Islands",
      "MP",
      "Occupied Palestinian Territories",
      "The Occupied Palestinian Territories",
      "PS",
      "Palmyra Atoll",
      "UM-95",
      "Pitcairn, Henderson, Ducie and Oeno Islands",
      "PN",
      "Puerto Rico",
      "Commonwealth of Puerto Rico",
      "PR",
      "Réunion",
      "RE",
      "Ras al-Khaimah",
      "Emirate of Ras al-Khaimah",
      "AE-RK",
      "Saba",
      "BQ-SA",
      "Saint Barthélemy",
      "BL",
      "Saint Helena",
      "SH-HL",
      "Saint-Martin (French part)",
      "Collectivity of Saint Martin",
      "MF",
      "Saint Pierre and Miquelon",
      "PM",
      "Sharjah",
      "Emirate of Sharjah",
      "AE-SH",
      "Sint Eustatius",
      "BQ-SE",
      "Sint Maarten (Dutch part)",
      "Sint Maarten",
      "SX",
      "South Georgia and South Sandwich Islands",
      "South Georgia and the South Sandwich Islands",
      "GS",
      "Svalbard and Jan Mayen",
      "SJ",
      "Taiwan",
      "TW",
      "Tokelau",
      "TK",
      "Tristan da Cunha",
      "SH-TA",
      "Turks and Caicos Islands",
      "TC",
      "Umm al-Quwain",
      "Emirate of Umm al-Quwain",
      "AE-UQ",
      "United States Virgin Islands",
      "Virgin Islands of the United States",
      "VI",
      "Wake Island",
      "UM-79",
      "Wallis and Futuna",
      "Territory of the Wallis and Futuna Islands",
      "WF",
      "Western Sahara",
      "EH",
      "Great Britain",
      "GBN",
      "England",
      "ENG",
      "Scotland",
      "SCT",
      "Wales",
      "WLS",
      "Northern Ireland",
      "NIR",
      "afganistan",
      "afgaanistan",
      "afgahanistan",
      "afganastan",
      "afganasthan",
      "afganestan",
      "afganhistan",
      "afganisthan",
      "afganitan",
      "afganstan",
      "afghainstan",
      "afghanisran",
      "afghanista",
      "afghanistan",
      "afghanistmn",
      "afghanistn",
      "afghanitan",
      "afghanlstan",
      "afghannistan",
      "afghansitan",
      "afghanstan",
      "afghanstani",
      "afghauistan",
      "afghinstan",
      "afghistan",
      "afghnistan",
      "afgmanistan",
      "afgnistan",
      "afgnitan",
      "afhganisthan",
      "afhganitan",
      "afohanistan",
      "afrhanistan",
      "aghanistan",
      "apshanistan",
      "atganistan",
      "Afghanestan",
      "افغانستان",
      "alabnia",
      "albana",
      "albania",
      "albanian",
      "albanija",
      "albenia",
      "albiana",
      "alibania",
      "Shqipëria",
      "aigeria",
      "al geria",
      "alegeria",
      "algeir",
      "algeirs",
      "algena",
      "alger",
      "algera",
      "algeres",
      "algeria",
      "algerian",
      "algerie",
      "algeries",
      "algers",
      "algieria",
      "algiers",
      "Dzayer",
      "ⴷⵣⴰⵢⴻⵔ",
      "Al-Jazā'ir",
      "الجزائر",
      "angolo",
      "Argenina",
      "Argentinia",
      "argentiha",
      "argentina",
      "argentine",
      "argentna",
      "genus argentina",
      "arima",
      "armenia",
      "arminia",
      "Hayastán",
      "Հայաստան",
      "hayastan",
      "Austraila",
      "Autralia",
      "ajstralia",
      "anstralia",
      "auitralia",
      "aujtralia",
      "ausralia",
      "austalia",
      "austaria",
      "austarlia",
      "austracia",
      "austraiih",
      "austraila",
      "austrailia",
      "australa",
      "australh",
      "australia",
      "australiag",
      "australian",
      "australla",
      "austrilia",
      "austrlia",
      "austrolia",
      "autralia",
      "avstralia",
      "avstria",
      "austria",
      "Österreich",
      "Osterreich",
      "Oesterreich",
      "azebaijan",
      "azeraijan",
      "azerbaijan",
      "azerbaijann",
      "azerbaisan",
      "azerbaizan",
      "azerbajan",
      "azerbaycan",
      "azerbayjan",
      "azerbeyjan",
      "azerbpijan",
      "Azərbaycan",
      "azerbaijani republic",
      "azerbajdzhan",
      "azerbajdzhan republic",
      "Al-Baḥrayn",
      "البحرين",
      "state of bahrain",
      "বাংলাদেশ",
      "bangla desh",
      "east pakistan",
      "Bielaruś",
      "Беларусь",
      "belorussia",
      "byelarus",
      "byelorussia",
      "white russia",
      "Belguim",
      "België",
      "Belgique",
      "Belgien",
      "Belgie",
      "british honduras",
      "dahomey",
      "Druk Yul",
      "འབྲུག་ཡུལ",
      "भूटान",
      "Buliwya",
      "Wuliwya",
      "Volívia",
      "Bosna i Hercegovina",
      "Босна и Херцеговина",
      "BiH",
      "bosna i hercegovina",
      "bosnia-herzegovina",
      "republic of bosnia and herzegovina",
      "Brasil",
      "بروني",
      "negara brunei darussalam",
      "Bugaria",
      "Bulagar",
      "Bulgariya",
      "Bălgarija",
      "България",
      "upper volta",
      "Myanma",
      "မြန်မာ",
      "union of burma",
      "Kampuchea",
      "កម្ពុជា",
      "kampuchea",
      "Cameroun",
      "cameroun",
      "Canadaigua",
      "Candada",
      "Cabo Verde",
      "Cabo",
      "République Centrafricaine",
      "Ködörösêse tî Bêafrîka",
      "central africa",
      "CAR",
      "Tchad",
      "Tšād",
      "تشاد",
      "تشاد‎",
      "Zhōngguó",
      "中国",
      "Zhongguo",
      "Zhonghua Peoples Republic",
      "中华",
      "cathay",
      "mainland china",
      "prc",
      "Komori",
      "Juzur al-Qamar",
      "جزر القمر",
      "Comores",
      "جز القمر",
      "federal islamic republic of the comoros",
      "République du Congo",
      "french congo",
      "Brazzaville",
      "République démocratique du Congo",
      "Congo-Brazzaville",
      "Repubilika ya Kongo",
      "Coasta Rica",
      "Costa Rico",
      "Hrvatska",
      "Kypros",
      "Κύπρος",
      "Kıbrıs",
      "Kýpros",
      "Czechoslav",
      "Česká republika",
      "Česko",
      "Česká",
      "Ceska",
      "Danmark",
      "Jībūtī",
      "جيبوتي",
      "جيبوتي‎",
      "Jabuuti",
      "Gabuuti",
      "Dominique",
      "República Dominicana",
      "Timor Lorosa'e",
      "Timor-Leste",
      "timor",
      "Egpyt",
      "Egyot",
      "Egyt",
      "Rgypt",
      "Misr",
      "Masr",
      "مصر",
      "united arab republic",
      "salvador",
      "Guinea Ecuatorial",
      "spanish guinea",
      "Iritriya",
      "إرتريا",
      "Ertra",
      "ኤርትራ",
      "Eesti",
      "esthonia",
      "Ethopi",
      "Ityop'ia",
      "ኢትዮጵያ",
      "abyssinia",
      "yaltopya",
      "Viti",
      "फ़िजी",
      "Suomi",
      "Aaland",
      "Åland",
      "République française",
      "République gabonaise",
      "République Gabonaise",
      "gabun",
      "Goergia",
      "Sak'art'velo",
      "საქართველო",
      "sakartvelo",
      "Deutschland",
      "Bundesrepublik",
      "frg",
      "gold coast",
      "Hellas",
      "Ελλάς",
      "Ellada",
      "Ελλάδα",
      "ellas",
      "Guinée",
      "Gine",
      "french guinea",
      "portuguese guinea",
      "british guiana",
      "Haïti",
      "Ayiti",
      "Magyarország",
      "magyarorszag",
      "Ísland",
      "Island",
      "Bharôt",
      "ভাৰত",
      "ভারত",
      "Bhārat",
      "ભારત",
      "भारत",
      "Bhārata",
      "ಭಾರತ",
      "Bhāratam",
      "ഭാരതം",
      "Bharôtô",
      "ଭାରତ",
      "ਭਾਰਤ",
      "भारतम्",
      "Bārata",
      "பாரதம்",
      "Bhāratadēsam",
      "భారత దేశం",
      "भारत गणराज्य",
      "Hindustan",
      "bharat",
      "dutch east indies",
      "Īrān",
      "ایران",
      "persia",
      "Al-'Iraq",
      "العراق",
      "Îraq",
      "‎IQ",
      "al-iraq",
      "irak",
      "Irelend",
      "Éire",
      "eire",
      "irish republic",
      "republic of ireland",
      "Isreal",
      "Yisra'el",
      "ישראל",
      "Israʼiyl",
      "إسرائيل",
      "sion",
      "yisrael",
      "zion",
      "Itlay",
      "Italia",
      "Cote dIvoire",
      "cote d'ivoire",
      "Jamaca",
      "Jamacia",
      "rastas",
      "rastafari",
      "Nihon",
      "Nippon",
      "日本",
      "Al-’Urdun",
      "الأردن",
      "Qazaqstan",
      "Қазақстан",
      "قازاقستان",
      "Kazakhstán",
      "Казахстан",
      "kazak",
      "kazakh",
      "kazakstan",
      "Kosova",
      "Косово",
      "Dawlat ul-Kuwayt",
      "دولة الكويت",
      "il-ikwet",
      "الكويت",
      "koweit",
      "Кыргызстан",
      "Kirgizija",
      "Киргизия",
      "kirghiz",
      "kirghizia",
      "kirghizstan",
      "kirgiz",
      "kirgizia",
      "kirgizstan",
      "kyrgyz republic",
      "Lao",
      "ປະເທດລາວ",
      "Latvija",
      "Latvijaz",
      "Lubnān",
      "لبنان",
      "basutoland",
      "ⵍⵉⴱⵢⴰ",
      "Lībiyā",
      "ليبيا",
      "socialist people's libyan arab jamahiriya",
      "Lietuva",
      "lietuva",
      "Luxemborg",
      "Lëtzebuerg",
      "Luxemburg",
      "luxemburg",
      "Makedonija",
      "Македонија",
      "macedon",
      "makedonija",
      "Madagasikara",
      "malagasy republic",
      "nyasaland",
      "Malyasi",
      "Mǎláixīyà",
      "马来西亚",
      "Malēṣiyā",
      "மலேசியா",
      "federation of malaysia",
      "Dhivehi Raajje",
      "french sudan",
      "Aorōkin M̧ajeļ",
      "Muritan",
      "Agawec",
      "ⵎⵓⵔⵉⵜⴰⵏ",
      "ⴰⴳⴰⵡⵛ",
      "Mūrītānyā",
      "موريتانيا",
      "الموريتانية",
      "mauritanie",
      "muritaniya",
      "Maurice",
      "Moris",
      "Mexcio",
      "Mexixo",
      "México",
      "Mēxihco",
      "Mexicanos",
      "tt",
      "moldavia",
      "Mongol Uls",
      "Монгол Улс",
      "ᠮᠤᠩᠭᠤᠯ ᠤᠯᠤᠰ",
      "Mongγol ulus",
      "Монгол улс",
      "outer mongolia",
      "Crna Gora",
      "Црна Гора",
      "crna gora",
      "Amerruk",
      "Elmeɣrib",
      "ⴰⵎⵔⵔⵓⴽ",
      "ⵍⵎⵖⵔⵉⴱ",
      "Al-maɣréb",
      "المغرب",
      "al-magrib",
      "maroc",
      "marruecos",
      "Moçambique",
      "mocambique",
      "Namibië",
      "south west africa",
      "Naoero",
      "Nepāl",
      "नेपाल",
      "Nederland",
      "Nederlân",
      "Holland",
      "holland",
      "nederland",
      "Zealnd",
      "Zeland",
      "Aotearoa",
      "Nijar",
      "Nijeriya",
      "Naíjíríà",
      "조선 / 朝鮮",
      "Bukchosŏn",
      "북조선",
      "d.p.r.k.",
      "dprk",
      "Norge",
      "Noreg",
      "noreg",
      "norge",
      "‘Umān",
      "عُمان",
      "عمان",
      "muscat and oman",
      "sultanate of oman",
      "پاکستان",
      "west pakistan",
      "Belau",
      "belau",
      "pelew",
      "Panamá",
      "Papua Niugini",
      "PNG",
      "Paraguái",
      "Perú",
      "Piruw",
      "Phillippine",
      "Pilipinas",
      "Pinas",
      "philippine islands",
      "Polska",
      "Portuguesa",
      "قطر",
      "katar",
      "state of katar",
      "Rumania",
      "Roumania",
      "România",
      "roumania",
      "rumania",
      "Rossiya",
      "Rossiâ",
      "Россия1",
      "Российская",
      "Россия",
      "ruanda",
      "rwandese republic",
      "Samo",
      "Amerika Sāmoa",
      "samoa i sisifo",
      "western samoa",
      "RSM",
      "Repubblica",
      "São Tomé e Príncipe",
      "sao thome e principe",
      "sao tome e principe",
      "st. thomas and principe",
      "Al-Mamlaka Al-‘Arabiyyah as Sa‘ūdiyyah",
      "المملكة العربية السعودية",
      "السعودية",
      "Sénégal",
      "Srbija",
      "Србија",
      "Sesel",
      "Singapura",
      "Xīnjiāpō",
      "新加坡",
      "Singapur",
      "சிங்கப்பூர்",
      "சிங்கப்பூர்கு",
      "டியரசு",
      "新加坡共和国",
      "Slovensko",
      "Slovenská",
      "Slovenija",
      "slovenija",
      "Solomon Aelan",
      "solomons",
      "Soomaaliya",
      "aş-Şūmāl",
      "الصومال",
      "aiai",
      "al-itihaad al-islamiya",
      "al itihaad al islamiya",
      "Suid-Afrika",
      "iNingizimu Afrika",
      "uMzantsi Afrika",
      "Afrika-Borwa",
      "Afrika Borwa",
      "Aforika Borwa",
      "Afurika Tshipembe",
      "Afrika Dzonga",
      "iSewula Afrika",
      "RSA",
      "Hanguk",
      "한국 / 韓國",
      "Namhan",
      "남한",
      "السودان",
      "España",
      "Espanya",
      "Espainia",
      "Espanha",
      "Sri Lankā",
      "ශ්‍රී ලංකාව",
      "இலங்கை",
      "ශ්‍රී ලංකා",
      "Ceylon",
      "ceylon",
      "As-Sudan",
      "soudan",
      "शर्नम्",
      "Sarnam",
      "Sranangron",
      "Umbuso weSwatini",
      "kaNgwane",
      "Eswatini",
      "weSwatini",
      "Swatini",
      "Ngwane",
      "Sverige",
      "sverige",
      "Switerland",
      "Schweiz",
      "Suisse",
      "Svizzera",
      "Svizra",
      "Swiss Confederation",
      "schweiz",
      "suisse",
      "svizzera",
      "Suriyah",
      "سورية",
      "Tojikistan",
      "Тоҷикистон",
      "Toçikiston",
      "tadjik",
      "tadzhik",
      "tadzhikistan",
      "tajik",
      "Mueang Thai",
      "Prathet Thai",
      "Ratcha-anachak Thai",
      "เมืองไทย",
      "ประเทศไทย",
      "ราชอาณาจักรไทย",
      "siam",
      "Bahamas",
      "Gambia",
      "Togolese",
      "friendly islands",
      "Tunes",
      "ⵜⵓⵏⵙ",
      "Tūns",
      "تونس",
      "Türkiye",
      "Turkiye",
      "Türkmenistan",
      "turkmen",
      "turkmenia",
      "turkomen",
      "Jèrri",
      "ellice islands",
      "Ukraїna",
      "Україна",
      "Ukrayina",
      "ukrayina",
      "arab emir ates",
      "arab emirates",
      "Al-’Imārat Al-‘Arabiyyah Al-Muttaḥidah",
      "الإمارات العربيّة المتّحدة",
      "الإمارات",
      "UAE",
      "Bitain",
      "Briain",
      "Britiain",
      "Brtain",
      "Englsnd",
      "Grat Britain",
      "Great Britan",
      "Gret Britain",
      "Scottland",
      "Y Deyrnas Unedig",
      "Unitit Kinrick",
      "Rìoghachd Aonaichte",
      "Ríocht Aontaithe",
      "An Rywvaneth Unys",
      "UK",
      "britain",
      "great britain",
      "u.k.",
      "uk",
      "Ameeri",
      "Ameica",
      "Amerca",
      "Amercia",
      "Ameria",
      "Amrica",
      "Anmerica",
      "Unit States",
      "Unite States",
      "United Sat",
      "United Staes",
      "United Stated",
      "United Stats",
      "United Sttes",
      "Unites States",
      "Untied State",
      "americia",
      "Estados Unidos",
      "États-Unis",
      "Amelika-hui-pu-'ia",
      "USA",
      "United States of America",
      "the states",
      "u.s.",
      "u.s.a.",
      "us",
      "usa",
      "us of a",
      "República Oriental del Uruguay",
      "Союз Советских Социалистических Республик",
      "O‘zbekiston",
      "Ўзбекистон",
      "O'zbekstan",
      "uzbek",
      "new hebrides",
      "E Civitate Vaticana",
      "Holy See",
      "citta del vaticano",
      "Venezula",
      "Veitnam",
      "Vietman",
      "Việt Nam",
      "annam",
      "Al-Yaman",
      "اليمن",
      "Yugosav",
      "jugoslavija",
      "northern rhodesia",
      "rhodesia",
      "Ahvenanmaa",
      "Aland",
      "aslension island",
      "island of guernsey",
      "island of jersey",
      "bermudas",
      "BQ",
      "Porto Rico",
      "Puarto Rico",
      "porto rico",
      "pr",
      "northern marianas",
      "Kòrsou",
      "Curacao",
      "Las Malvinas",
      "Føroyar",
      "Færøerne",
      "faeroe islands",
      "aeroes",
      "faroes",
      "Guyane",
      "Polynésie française",
      "french oceania",
      "calpe",
      "Kalaallit Nunaat",
      "Grønland",
      "grønland",
      "gronland",
      "kalaallit nunaat",
      "Heung Gong",
      "香港",
      "Ellan Vannin",
      "macau",
      "Nouvelle-Calédonie",
      "Niuē",
      "Reunion",
      "St. Barthelemy",
      "St Barth",
      "SH",
      "Saint-Pierre et Miquelon",
      "Zhōnghuá Mínguó",
      "Táiwān",
      "中華民國",
      "臺灣/台灣",
      "台灣",
      "臺灣",
      "ROC",
      "Chinese Taipei",
      "eastern samoa",
      "Guåhån",
      "Wallis-et-Futuna",
      "Uvea mo Futuna",
      "IO British",
      "I.O.T.",
      "IOT",
      "فلسطين",
      "Virgina Islands",
      "BVI",
      "B.V.I",
      "american virgin islands",
      "spanish sahara",
      "لصحراء الغربية",
      "Argentine Antarctica",
      "Australian Antarctic Territory",
      "Chilean Antarctic Territory",
      "Adélie Land",
      "Ross Dependency",
      "Queen Maud Land",
      "Peter I Island",
      "Baffin Island",
      "Atlantis",
      "Principality of Dorne",
    ],
    "queryTokenizer": [Function],
  },
]
`;

exports[`createSuggestionEngine passes custom synonyms to Engine 1`] = `
Array [
  Object {
    "datumTokenizer": [Function],
    "local": Array [
      "USSR",
      "Union of Soviet Socialist Republics",
      "SU",
      "Germany",
      "The Federal Republic of Germany",
      "DE",
      "East Germany",
      "Germany Democratic Republic",
      "DD",
      "Yugoslavia",
      "Socialist Federal Republic of Yugoslavia",
      "YU",
      "Czechoslovakia",
      "Czechoslovak Republic",
      "CS",
      "United Kingdom",
      "The United Kingdom of Great Britain and Northern Ireland",
      "GB",
      "Afghanistan",
      "The Islamic Republic of Afghanistan",
      "AF",
      "Albania",
      "The Republic of Albania",
      "AL",
      "Algeria",
      "The People's Democratic Republic of Algeria",
      "DZ",
      "Andorra",
      "The Principality of Andorra",
      "AD",
      "Angola",
      "The Republic of Angola",
      "AO",
      "Antigua and Barbuda",
      "AG",
      "Argentina",
      "The Argentine Republic",
      "AR",
      "Armenia",
      "The Republic of Armenia",
      "AM",
      "Australia",
      "The Commonwealth of Australia",
      "AU",
      "Austria",
      "The Republic of Austria",
      "AT",
      "Azerbaijan",
      "The Republic of Azerbaijan",
      "AZ",
      "The Bahamas",
      "The Commonwealth of The Bahamas",
      "BS",
      "Bahrain",
      "The Kingdom of Bahrain",
      "BH",
      "Bangladesh",
      "The People's Republic of Bangladesh",
      "BD",
      "Barbados",
      "BB",
      "Belarus",
      "The Republic of Belarus",
      "BY",
      "Belgium",
      "The Kingdom of Belgium",
      "BE",
      "Belize",
      "BZ",
      "Benin",
      "The Republic of Benin",
      "BJ",
      "Bhutan",
      "The Kingdom of Bhutan",
      "BT",
      "Bolivia",
      "The Plurinational State of Bolivia",
      "BO",
      "Bosnia and Herzegovina",
      "BA",
      "Botswana",
      "The Republic of Botswana",
      "BW",
      "Brazil",
      "The Federative Republic of Brazil",
      "BR",
      "Brunei",
      "Brunei Darussalam",
      "BN",
      "Bulgaria",
      "The Republic of Bulgaria",
      "BG",
      "Burkina Faso",
      "BF",
      "Burma",
      "The Republic of the Union of Myanmar",
      "MM",
      "Burundi",
      "The Republic of Burundi",
      "BI",
      "Cambodia",
      "The Kingdom of Cambodia",
      "KH",
      "Cameroon",
      "The Republic of Cameroon",
      "CM",
      "Canada",
      "CA",
      "Cape Verde",
      "The Republic of Cabo Verde",
      "CV",
      "Central African Republic",
      "The Central African Republic",
      "CF",
      "Chad",
      "The Republic of Chad",
      "TD",
      "Chile",
      "The Republic of Chile",
      "CL",
      "China",
      "The People's Republic of China",
      "CN",
      "Colombia",
      "The Republic of Colombia",
      "CO",
      "Comoros",
      "The Union of the Comoros",
      "KM",
      "Congo",
      "The Republic of the Congo",
      "CG",
      "Congo (Democratic Republic)",
      "The Democratic Republic of the Congo",
      "CD",
      "Costa Rica",
      "The Republic of Costa Rica",
      "CR",
      "Croatia",
      "The Republic of Croatia",
      "HR",
      "Cuba",
      "The Republic of Cuba",
      "CU",
      "Cyprus",
      "The Republic of Cyprus",
      "CY",
      "Czechia",
      "The Czech Republic",
      "CZ",
      "Denmark",
      "The Kingdom of Denmark",
      "DK",
      "Djibouti",
      "The Republic of Djibouti",
      "DJ",
      "Dominica",
      "The Commonwealth of Dominica",
      "DM",
      "Dominican Republic",
      "The Dominican Republic",
      "DO",
      "East Timor",
      "The Democratic Republic of Timor-Leste",
      "TL",
      "Ecuador",
      "The Republic of Ecuador",
      "EC",
      "Egypt",
      "The Arab Republic of Egypt",
      "EG",
      "El Salvador",
      "The Republic of El Salvador",
      "SV",
      "Equatorial Guinea",
      "The Republic of Equatorial Guinea",
      "GQ",
      "Eritrea",
      "The State of Eritrea",
      "ER",
      "Estonia",
      "The Republic of Estonia",
      "EE",
      "Ethiopia",
      "The Federal Democratic Republic of Ethiopia",
      "ET",
      "Fiji",
      "The Republic of Fiji",
      "FJ",
      "Finland",
      "The Republic of Finland",
      "FI",
      "France",
      "The French Republic",
      "FR",
      "Gabon",
      "The Gabonese Republic",
      "GA",
      "The Gambia",
      "The Islamic Republic of The Gambia",
      "GM",
      "Georgia",
      "GE",
      "Ghana",
      "The Republic of Ghana",
      "GH",
      "Greece",
      "The Hellenic Republic",
      "GR",
      "Grenada",
      "GD",
      "Guatemala",
      "The Republic of Guatemala",
      "GT",
      "Guinea",
      "The Republic of Guinea",
      "GN",
      "Guinea-Bissau",
      "The Republic of Guinea-Bissau",
      "GW",
      "Guyana",
      "The Co-operative Republic of Guyana",
      "GY",
      "Haiti",
      "The Republic of Haiti",
      "HT",
      "Honduras",
      "The Republic of Honduras",
      "HN",
      "Hungary",
      "HU",
      "Iceland",
      "The Republic of Iceland",
      "IS",
      "India",
      "The Republic of India",
      "IN",
      "Indonesia",
      "The Republic of Indonesia",
      "ID",
      "Iran",
      "The Islamic Republic of Iran",
      "IR",
      "Iraq",
      "The Republic of Iraq",
      "IQ",
      "Ireland",
      "IE",
      "Israel",
      "The State of Israel",
      "IL",
      "Italy",
      "The Italian Republic",
      "IT",
      "Ivory Coast",
      "The Republic of Cote D'Ivoire",
      "CI",
      "Jamaica",
      "JM",
      "Japan",
      "JP",
      "Jordan",
      "The Hashemite Kingdom of Jordan",
      "JO",
      "Kazakhstan",
      "The Republic of Kazakhstan",
      "KZ",
      "Kenya",
      "The Republic of Kenya",
      "KE",
      "Kiribati",
      "The Republic of Kiribati",
      "KI",
      "North Korea",
      "The Democratic People's Republic of Korea",
      "KP",
      "South Korea",
      "The Republic of Korea",
      "KR",
      "Kosovo",
      "The Republic of Kosovo",
      "XK",
      "Kuwait",
      "The State of Kuwait",
      "KW",
      "Kyrgyzstan",
      "The Kyrgyz Republic",
      "KG",
      "Laos",
      "The Lao People's Democratic Republic",
      "LA",
      "Latvia",
      "The Republic of Latvia",
      "LV",
      "Lebanon",
      "The Lebanese Republic",
      "LB",
      "Lesotho",
      "The Kingdom of Lesotho",
      "LS",
      "Liberia",
      "The Republic of Liberia",
      "LR",
      "Libya",
      "LY",
      "Liechtenstein",
      "The Principality of Liechtenstein",
      "LI",
      "Lithuania",
      "The Republic of Lithuania",
      "LT",
      "Luxembourg",
      "The Grand Duchy of Luxembourg",
      "LU",
      "Macedonia",
      "The Republic of Macedonia",
      "MK",
      "Madagascar",
      "The Republic of Madagascar",
      "MG",
      "Malawi",
      "The Republic of Malawi",
      "MW",
      "Malaysia",
      "MY",
      "Maldives",
      "The Republic of Maldives",
      "MV",
      "Mali",
      "The Republic of Mali",
      "ML",
      "Malta",
      "The Republic of Malta",
      "MT",
      "Marshall Islands",
      "The Republic of the Marshall Islands",
      "MH",
      "Mauritania",
      "The Islamic Republic of Mauritania",
      "MR",
      "Mauritius",
      "The Republic of Mauritius",
      "MU",
      "Mexico",
      "The United Mexican States",
      "MX",
      "Micronesia",
      "The Federated States of Micronesia",
      "FM",
      "Moldova",
      "The Republic of Moldova",
      "MD",
      "Monaco",
      "The Principality of Monaco",
      "MC",
      "Mongolia",
      "MN",
      "Montenegro",
      "ME",
      "Morocco",
      "The Kingdom of Morocco",
      "MA",
      "Mozambique",
      "The Republic of Mozambique",
      "MZ",
      "Namibia",
      "The Republic of Namibia",
      "NA",
      "Nauru",
      "The Republic of Nauru",
      "NR",
      "Nepal",
      "The Federal Democratic Republic of Nepal",
      "NP",
      "Netherlands",
      "The Kingdom of the Netherlands",
      "NL",
      "New Zealand",
      "NZ",
      "Nicaragua",
      "The Republic of Nicaragua",
      "NI",
      "Niger",
      "The Republic of Niger",
      "NE",
      "Nigeria",
      "The Federal Republic of Nigeria",
      "NG",
      "Norway",
      "The Kingdom of Norway",
      "NO",
      "Oman",
      "The Sultanate of Oman",
      "OM",
      "Pakistan",
      "The Islamic Republic of Pakistan",
      "PK",
      "Palau",
      "The Republic of Palau",
      "PW",
      "Panama",
      "The Republic of Panama",
      "PA",
      "Papua New Guinea",
      "The Independent State of Papua New Guinea",
      "PG",
      "Paraguay",
      "The Republic of Paraguay",
      "PY",
      "Peru",
      "The Republic of Peru",
      "PE",
      "Philippines",
      "The Republic of the Philippines",
      "PH",
      "Poland",
      "The Republic of Poland",
      "PL",
      "Portugal",
      "The Portuguese Republic",
      "PT",
      "Qatar",
      "The State of Qatar",
      "QA",
      "Romania",
      "RO",
      "Russia",
      "The Russian Federation",
      "RU",
      "Rwanda",
      "The Republic of Rwanda",
      "RW",
      "St Kitts and Nevis",
      "The Federation of Saint Christopher and Nevis",
      "KN",
      "St Lucia",
      "Saint Lucia",
      "LC",
      "St Vincent",
      "Saint Vincent and the Grenadines",
      "VC",
      "Samoa",
      "The Independent State of Samoa",
      "WS",
      "San Marino",
      "The Republic of San Marino",
      "SM",
      "Sao Tome and Principe",
      "The Democratic Republic of Sao Tome and Principe",
      "ST",
      "Saudi Arabia",
      "The Kingdom of Saudi Arabia",
      "SA",
      "Senegal",
      "The Republic of Senegal",
      "SN",
      "Serbia",
      "The Republic of Serbia",
      "RS",
      "Seychelles",
      "The Republic of Seychelles",
      "SC",
      "Sierra Leone",
      "The Republic of Sierra Leone",
      "SL",
      "Singapore",
      "The Republic of Singapore",
      "SG",
      "Slovakia",
      "The Slovak Republic",
      "SK",
      "Slovenia",
      "The Republic of Slovenia",
      "SI",
      "Solomon Islands",
      "SB",
      "Somalia",
      "Federal Republic of Somalia",
      "SO",
      "South Africa",
      "The Republic of South Africa",
      "ZA",
      "South Sudan",
      "The Republic of South Sudan",
      "SS",
      "Spain",
      "The Kingdom of Spain",
      "ES",
      "Sri Lanka",
      "The Democratic Socialist Republic of Sri Lanka",
      "LK",
      "Sudan",
      "The Republic of the Sudan",
      "SD",
      "Suriname",
      "The Republic of Suriname",
      "SR",
      "Swaziland",
      "The Kingdom of Swaziland",
      "SZ",
      "Sweden",
      "The Kingdom of Sweden",
      "SE",
      "Switzerland",
      "The Swiss Confederation",
      "CH",
      "Syria",
      "The Syrian Arab Republic",
      "SY",
      "Tajikistan",
      "The Republic of Tajikistan",
      "TJ",
      "Tanzania",
      "The United Republic of Tanzania",
      "TZ",
      "Thailand",
      "The Kingdom of Thailand",
      "TH",
      "Togo",
      "The Togolese Republic",
      "TG",
      "Tonga",
      "The Kingdom of Tonga",
      "TO",
      "Trinidad and Tobago",
      "The Republic of Trinidad and Tobago",
      "TT",
      "Tunisia",
      "The Tunisian Republic",
      "TN",
      "Turkey",
      "The Republic of Turkey",
      "TR",
      "Turkmenistan",
      "TM",
      "Tuvalu",
      "TV",
      "Uganda",
      "The Republic of Uganda",
      "UG",
      "Ukraine",
      "UA",
      "United Arab Emirates",
      "The United Arab Emirates",
      "AE",
      "United States",
      "The United States of America",
      "US",
      "Uruguay",
      "The Oriental Republic of Uruguay",
      "UY",
      "Uzbekistan",
      "The Republic of Uzbekistan",
      "UZ",
      "Vanuatu",
      "The Republic of Vanuatu",
      "VU",
      "Vatican City",
      "Vatican City State",
      "VA",
      "Venezuela",
      "The Bolivarian Republic of Venezuela",
      "VE",
      "Vietnam",
      "The Socialist Republic of Vietnam",
      "VN",
      "Yemen",
      "The Republic of Yemen",
      "YE",
      "Zambia",
      "The Republic of Zambia",
      "ZM",
      "Zimbabwe",
      "The Republic of Zimbabwe",
      "ZW",
      "Abu Dhabi",
      "Emirate of Abu Dhabi",
      "AE-AZ",
      "Ascension",
      "Ascension Island",
      "SH-AC",
      "Ajman",
      "Emirate of Ajman",
      "AE-AJ",
      "Akrotiri",
      "Sovereign Base Areas of Akrotiri and Dhekelia",
      "XQZ",
      "Åland Islands",
      "AX",
      "American Samoa",
      "Territory of American Samoa",
      "AS",
      "Anguilla",
      "AI",
      "Antarctica",
      "AQ",
      "Aruba",
      "AW",
      "Baker Island",
      "UM-81",
      "Bermuda",
      "BM",
      "Bonaire",
      "BQ-BO",
      "Bouvet Island",
      "BV",
      "British Antarctic Territory",
      "BAT",
      "British Indian Ocean Territory",
      "The British Indian Ocean Territory",
      "IO",
      "British Virgin Islands",
      "The Virgin Islands",
      "VG",
      "Cayman Islands",
      "KY",
      "Christmas Island",
      "Territory of Christmas Island",
      "CX",
      "Cocos (Keeling) Islands",
      "Territory of the Cocos (Keeling) Islands",
      "CC",
      "Cook Islands",
      "CK",
      "Ceuta",
      "ES-CE",
      "Curaçao",
      "Country of Curaçao",
      "CW",
      "Dhekelia",
      "XXD",
      "Dubai",
      "Emirate of Dubai",
      "AE-DU",
      "Falkland Islands",
      "FK",
      "Faroe Islands",
      "FO",
      "French Guiana",
      "GF",
      "French Polynesia",
      "PF",
      "French Southern Territories",
      "TF",
      "Fujairah",
      "Emirate of Fujairah",
      "AE-FU",
      "Gibraltar",
      "GI",
      "Greenland",
      "GL",
      "Guadeloupe",
      "GP",
      "Guam",
      "Territory of Guam",
      "GU",
      "Guernsey",
      "Bailiwick of Guernsey",
      "GG",
      "Heard Island and McDonald Islands",
      "Territory of Heard Island and McDonald Islands",
      "HM",
      "Hong Kong",
      "Hong Kong Special Administrative Region",
      "HK",
      "Howland Island",
      "UM-84",
      "Isle of Man",
      "IM",
      "Jarvis Island",
      "UM-86",
      "Jersey",
      "Bailiwick of Jersey",
      "JE",
      "Johnston Atoll",
      "UM-67",
      "Kingman Reef",
      "UM-89",
      "Macao",
      "Macao Special Administrative Region",
      "MO",
      "Martinique",
      "MQ",
      "Mayotte",
      "YT",
      "Melilla",
      "ES-ML",
      "Midway Islands",
      "UM-71",
      "Montserrat",
      "MS",
      "Navassa Island",
      "UM-76",
      "New Caledonia",
      "NC",
      "Niue",
      "NU",
      "Norfolk Island",
      "Territory of Norfolk Island",
      "NF",
      "Northern Mariana Islands",
      "Commonwealth of the Northern Mariana Islands",
      "MP",
      "Occupied Palestinian Territories",
      "The Occupied Palestinian Territories",
      "PS",
      "Palmyra Atoll",
      "UM-95",
      "Pitcairn, Henderson, Ducie and Oeno Islands",
      "PN",
      "Puerto Rico",
      "Commonwealth of Puerto Rico",
      "PR",
      "Réunion",
      "RE",
      "Ras al-Khaimah",
      "Emirate of Ras al-Khaimah",
      "AE-RK",
      "Saba",
      "BQ-SA",
      "Saint Barthélemy",
      "BL",
      "Saint Helena",
      "SH-HL",
      "Saint-Martin (French part)",
      "Collectivity of Saint Martin",
      "MF",
      "Saint Pierre and Miquelon",
      "PM",
      "Sharjah",
      "Emirate of Sharjah",
      "AE-SH",
      "Sint Eustatius",
      "BQ-SE",
      "Sint Maarten (Dutch part)",
      "Sint Maarten",
      "SX",
      "South Georgia and South Sandwich Islands",
      "South Georgia and the South Sandwich Islands",
      "GS",
      "Svalbard and Jan Mayen",
      "SJ",
      "Taiwan",
      "TW",
      "Tokelau",
      "TK",
      "Tristan da Cunha",
      "SH-TA",
      "Turks and Caicos Islands",
      "TC",
      "Umm al-Quwain",
      "Emirate of Umm al-Quwain",
      "AE-UQ",
      "United States Virgin Islands",
      "Virgin Islands of the United States",
      "VI",
      "Wake Island",
      "UM-79",
      "Wallis and Futuna",
      "Territory of the Wallis and Futuna Islands",
      "WF",
      "Western Sahara",
      "EH",
      "Great Britain",
      "GBN",
      "England",
      "ENG",
      "Scotland",
      "SCT",
      "Wales",
      "WLS",
      "Northern Ireland",
      "NIR",
      "afganistan",
      "afgaanistan",
      "afgahanistan",
      "afganastan",
      "afganasthan",
      "afganestan",
      "afganhistan",
      "afganisthan",
      "afganitan",
      "afganstan",
      "afghainstan",
      "afghanisran",
      "afghanista",
      "afghanistan",
      "afghanistmn",
      "afghanistn",
      "afghanitan",
      "afghanlstan",
      "afghannistan",
      "afghansitan",
      "afghanstan",
      "afghanstani",
      "afghauistan",
      "afghinstan",
      "afghistan",
      "afghnistan",
      "afgmanistan",
      "afgnistan",
      "afgnitan",
      "afhganisthan",
      "afhganitan",
      "afohanistan",
      "afrhanistan",
      "aghanistan",
      "apshanistan",
      "atganistan",
      "Afghanestan",
      "افغانستان",
      "alabnia",
      "albana",
      "albania",
      "albanian",
      "albanija",
      "albenia",
      "albiana",
      "alibania",
      "Shqipëria",
      "aigeria",
      "al geria",
      "alegeria",
      "algeir",
      "algeirs",
      "algena",
      "alger",
      "algera",
      "algeres",
      "algeria",
      "algerian",
      "algerie",
      "algeries",
      "algers",
      "algieria",
      "algiers",
      "Dzayer",
      "ⴷⵣⴰⵢⴻⵔ",
      "Al-Jazā'ir",
      "الجزائر",
      "angolo",
      "Argenina",
      "Argentinia",
      "argentiha",
      "argentina",
      "argentine",
      "argentna",
      "genus argentina",
      "arima",
      "armenia",
      "arminia",
      "Hayastán",
      "Հայաստան",
      "hayastan",
      "Austraila",
      "Autralia",
      "ajstralia",
      "anstralia",
      "auitralia",
      "aujtralia",
      "ausralia",
      "austalia",
      "austaria",
      "austarlia",
      "austracia",
      "austraiih",
      "austraila",
      "austrailia",
      "australa",
      "australh",
      "australia",
      "australiag",
      "australian",
      "australla",
      "austrilia",
      "austrlia",
      "austrolia",
      "autralia",
      "avstralia",
      "avstria",
      "austria",
      "Österreich",
      "Osterreich",
      "Oesterreich",
      "azebaijan",
      "azeraijan",
      "azerbaijan",
      "azerbaijann",
      "azerbaisan",
      "azerbaizan",
      "azerbajan",
      "azerbaycan",
      "azerbayjan",
      "azerbeyjan",
      "azerbpijan",
      "Azərbaycan",
      "azerbaijani republic",
      "azerbajdzhan",
      "azerbajdzhan republic",
      "Al-Baḥrayn",
      "البحرين",
      "state of bahrain",
      "বাংলাদেশ",
      "bangla desh",
      "east pakistan",
      "Bielaruś",
      "Беларусь",
      "belorussia",
      "byelarus",
      "byelorussia",
      "white russia",
      "Belguim",
      "België",
      "Belgique",
      "Belgien",
      "Belgie",
      "british honduras",
      "dahomey",
      "Druk Yul",
      "འབྲུག་ཡུལ",
      "भूटान",
      "Buliwya",
      "Wuliwya",
      "Volívia",
      "Bosna i Hercegovina",
      "Босна и Херцеговина",
      "BiH",
      "bosna i hercegovina",
      "bosnia-herzegovina",
      "republic of bosnia and herzegovina",
      "Brasil",
      "بروني",
      "negara brunei darussalam",
      "Bugaria",
      "Bulagar",
      "Bulgariya",
      "Bălgarija",
      "България",
      "upper volta",
      "Myanma",
      "မြန်မာ",
      "union of burma",
      "Kampuchea",
      "កម្ពុជា",
      "kampuchea",
      "Cameroun",
      "cameroun",
      "Canadaigua",
      "Candada",
      "Cabo Verde",
      "Cabo",
      "République Centrafricaine",
      "Ködörösêse tî Bêafrîka",
      "central africa",
      "CAR",
      "Tchad",
      "Tšād",
      "تشاد",
      "تشاد‎",
      "Zhōngguó",
      "中国",
      "Zhongguo",
      "Zhonghua Peoples Republic",
      "中华",
      "cathay",
      "mainland china",
      "prc",
      "Komori",
      "Juzur al-Qamar",
      "جزر القمر",
      "Comores",
      "جز القمر",
      "federal islamic republic of the comoros",
      "République du Congo",
      "french congo",
      "Brazzaville",
      "République démocratique du Congo",
      "Congo-Brazzaville",
      "Repubilika ya Kongo",
      "Coasta Rica",
      "Costa Rico",
      "Hrvatska",
      "Kypros",
      "Κύπρος",
      "Kıbrıs",
      "Kýpros",
      "Czechoslav",
      "Česká republika",
      "Česko",
      "Česká",
      "Ceska",
      "Danmark",
      "Jībūtī",
      "جيبوتي",
      "جيبوتي‎",
      "Jabuuti",
      "Gabuuti",
      "Dominique",
      "República Dominicana",
      "Timor Lorosa'e",
      "Timor-Leste",
      "timor",
      "Egpyt",
      "Egyot",
      "Egyt",
      "Rgypt",
      "Misr",
      "Masr",
      "مصر",
      "united arab republic",
      "salvador",
      "Guinea Ecuatorial",
      "spanish guinea",
      "Iritriya",
      "إرتريا",
      "Ertra",
      "ኤርትራ",
      "Eesti",
      "esthonia",
      "Ethopi",
      "Ityop'ia",
      "ኢትዮጵያ",
      "abyssinia",
      "yaltopya",
      "Viti",
      "फ़िजी",
      "Suomi",
      "Aaland",
      "Åland",
      "République française",
      "République gabonaise",
      "République Gabonaise",
      "gabun",
      "Goergia",
      "Sak'art'velo",
      "საქართველო",
      "sakartvelo",
      "Deutschland",
      "Bundesrepublik",
      "frg",
      "gold coast",
      "Hellas",
      "Ελλάς",
      "Ellada",
      "Ελλάδα",
      "ellas",
      "Guinée",
      "Gine",
      "french guinea",
      "portuguese guinea",
      "british guiana",
      "Haïti",
      "Ayiti",
      "Magyarország",
      "magyarorszag",
      "Ísland",
      "Island",
      "Bharôt",
      "ভাৰত",
      "ভারত",
      "Bhārat",
      "ભારત",
      "भारत",
      "Bhārata",
      "ಭಾರತ",
      "Bhāratam",
      "ഭാരതം",
      "Bharôtô",
      "ଭାରତ",
      "ਭਾਰਤ",
      "भारतम्",
      "Bārata",
      "பாரதம்",
      "Bhāratadēsam",
      "భారత దేశం",
      "भारत गणराज्य",
      "Hindustan",
      "bharat",
      "dutch east indies",
      "Īrān",
      "ایران",
      "persia",
      "Al-'Iraq",
      "العراق",
      "Îraq",
      "‎IQ",
      "al-iraq",
      "irak",
      "Irelend",
      "Éire",
      "eire",
      "irish republic",
      "republic of ireland",
      "Isreal",
      "Yisra'el",
      "ישראל",
      "Israʼiyl",
      "إسرائيل",
      "sion",
      "yisrael",
      "zion",
      "Itlay",
      "Italia",
      "Cote dIvoire",
      "cote d'ivoire",
      "Jamaca",
      "Jamacia",
      "rastas",
      "rastafari",
      "Nihon",
      "Nippon",
      "日本",
      "Al-’Urdun",
      "الأردن",
      "Qazaqstan",
      "Қазақстан",
      "قازاقستان",
      "Kazakhstán",
      "Казахстан",
      "kazak",
      "kazakh",
      "kazakstan",
      "Kosova",
      "Косово",
      "Dawlat ul-Kuwayt",
      "دولة الكويت",
      "il-ikwet",
      "الكويت",
      "koweit",
      "Кыргызстан",
      "Kirgizija",
      "Киргизия",
      "kirghiz",
      "kirghizia",
      "kirghizstan",
      "kirgiz",
      "kirgizia",
      "kirgizstan",
      "kyrgyz republic",
      "Lao",
      "ປະເທດລາວ",
      "Latvija",
      "Latvijaz",
      "Lubnān",
      "لبنان",
      "basutoland",
      "ⵍⵉⴱⵢⴰ",
      "Lībiyā",
      "ليبيا",
      "socialist people's libyan arab jamahiriya",
      "Lietuva",
      "lietuva",
      "Luxemborg",
      "Lëtzebuerg",
      "Luxemburg",
      "luxemburg",
      "Makedonija",
      "Македонија",
      "macedon",
      "makedonija",
      "Madagasikara",
      "malagasy republic",
      "nyasaland",
      "Malyasi",
      "Mǎláixīyà",
      "马来西亚",
      "Malēṣiyā",
      "மலேசியா",
      "federation of malaysia",
      "Dhivehi Raajje",
      "french sudan",
      "Aorōkin M̧ajeļ",
      "Muritan",
      "Agawec",
      "ⵎⵓⵔⵉⵜⴰⵏ",
      "ⴰⴳⴰⵡⵛ",
      "Mūrītānyā",
      "موريتانيا",
      "الموريتانية",
      "mauritanie",
      "muritaniya",
      "Maurice",
      "Moris",
      "Mexcio",
      "Mexixo",
      "México",
      "Mēxihco",
      "Mexicanos",
      "tt",
      "moldavia",
      "Mongol Uls",
      "Монгол Улс",
      "ᠮᠤᠩᠭᠤᠯ ᠤᠯᠤᠰ",
      "Mongγol ulus",
      "Монгол улс",
      "outer mongolia",
      "Crna Gora",
      "Црна Гора",
      "crna gora",
      "Amerruk",
      "Elmeɣrib",
      "ⴰⵎⵔⵔⵓⴽ",
      "ⵍⵎⵖⵔⵉⴱ",
      "Al-maɣréb",
      "المغرب",
      "al-magrib",
      "maroc",
      "marruecos",
      "Moçambique",
      "mocambique",
      "Namibië",
      "south west africa",
      "Naoero",
      "Nepāl",
      "नेपाल",
      "Nederland",
      "Nederlân",
      "Holland",
      "holland",
      "nederland",
      "Zealnd",
      "Zeland",
      "Aotearoa",
      "Nijar",
      "Nijeriya",
      "Naíjíríà",
      "조선 / 朝鮮",
      "Bukchosŏn",
      "북조선",
      "d.p.r.k.",
      "dprk",
      "Norge",
      "Noreg",
      "noreg",
      "norge",
      "‘Umān",
      "عُمان",
      "عمان",
      "muscat and oman",
      "sultanate of oman",
      "پاکستان",
      "west pakistan",
      "Belau",
      "belau",
      "pelew",
      "Panamá",
      "Papua Niugini",
      "PNG",
      "Paraguái",
      "Perú",
      "Piruw",
      "Phillippine",
      "Pilipinas",
      "Pinas",
      "philippine islands",
      "Polska",
      "Portuguesa",
      "قطر",
      "katar",
      "state of katar",
      "Rumania",
      "Roumania",
      "România",
      "roumania",
      "rumania",
      "Rossiya",
      "Rossiâ",
      "Россия1",
      "Российская",
      "Россия",
      "ruanda",
      "rwandese republic",
      "Samo",
      "Amerika Sāmoa",
      "samoa i sisifo",
      "western samoa",
      "RSM",
      "Repubblica",
      "São Tomé e Príncipe",
      "sao thome e principe",
      "sao tome e principe",
      "st. thomas and principe",
      "Al-Mamlaka Al-‘Arabiyyah as Sa‘ūdiyyah",
      "المملكة العربية السعودية",
      "السعودية",
      "Sénégal",
      "Srbija",
      "Србија",
      "Sesel",
      "Singapura",
      "Xīnjiāpō",
      "新加坡",
      "Singapur",
      "சிங்கப்பூர்",
      "சிங்கப்பூர்கு",
      "டியரசு",
      "新加坡共和国",
      "Slovensko",
      "Slovenská",
      "Slovenija",
      "slovenija",
      "Solomon Aelan",
      "solomons",
      "Soomaaliya",
      "aş-Şūmāl",
      "الصومال",
      "aiai",
      "al-itihaad al-islamiya",
      "al itihaad al islamiya",
      "Suid-Afrika",
      "iNingizimu Afrika",
      "uMzantsi Afrika",
      "Afrika-Borwa",
      "Afrika Borwa",
      "Aforika Borwa",
      "Afurika Tshipembe",
      "Afrika Dzonga",
      "iSewula Afrika",
      "RSA",
      "Hanguk",
      "한국 / 韓國",
      "Namhan",
      "남한",
      "السودان",
      "España",
      "Espanya",
      "Espainia",
      "Espanha",
      "Sri Lankā",
      "ශ්‍රී ලංකාව",
      "இலங்கை",
      "ශ්‍රී ලංකා",
      "Ceylon",
      "ceylon",
      "As-Sudan",
      "soudan",
      "शर्नम्",
      "Sarnam",
      "Sranangron",
      "Umbuso weSwatini",
      "kaNgwane",
      "Eswatini",
      "weSwatini",
      "Swatini",
      "Ngwane",
      "Sverige",
      "sverige",
      "Switerland",
      "Schweiz",
      "Suisse",
      "Svizzera",
      "Svizra",
      "Swiss Confederation",
      "schweiz",
      "suisse",
      "svizzera",
      "Suriyah",
      "سورية",
      "Tojikistan",
      "Тоҷикистон",
      "Toçikiston",
      "tadjik",
      "tadzhik",
      "tadzhikistan",
      "tajik",
      "Mueang Thai",
      "Prathet Thai",
      "Ratcha-anachak Thai",
      "เมืองไทย",
      "ประเทศไทย",
      "ราชอาณาจักรไทย",
      "siam",
      "Bahamas",
      "Gambia",
      "Togolese",
      "friendly islands",
      "Tunes",
      "ⵜⵓⵏⵙ",
      "Tūns",
      "تونس",
      "Türkiye",
      "Turkiye",
      "Türkmenistan",
      "turkmen",
      "turkmenia",
      "turkomen",
      "Jèrri",
      "ellice islands",
      "Ukraїna",
      "Україна",
      "Ukrayina",
      "ukrayina",
      "arab emir ates",
      "arab emirates",
      "Al-’Imārat Al-‘Arabiyyah Al-Muttaḥidah",
      "الإمارات العربيّة المتّحدة",
      "الإمارات",
      "UAE",
      "Bitain",
      "Briain",
      "Britiain",
      "Brtain",
      "Englsnd",
      "Grat Britain",
      "Great Britan",
      "Gret Britain",
      "Scottland",
      "Y Deyrnas Unedig",
      "Unitit Kinrick",
      "Rìoghachd Aonaichte",
      "Ríocht Aontaithe",
      "An Rywvaneth Unys",
      "UK",
      "britain",
      "great britain",
      "u.k.",
      "uk",
      "Ameeri",
      "Ameica",
      "Amerca",
      "Amercia",
      "Ameria",
      "Amrica",
      "Anmerica",
      "Unit States",
      "Unite States",
      "United Sat",
      "United Staes",
      "United Stated",
      "United Stats",
      "United Sttes",
      "Unites States",
      "Untied State",
      "americia",
      "Estados Unidos",
      "États-Unis",
      "Amelika-hui-pu-'ia",
      "USA",
      "United States of America",
      "the states",
      "u.s.",
      "u.s.a.",
      "us",
      "usa",
      "us of a",
      "República Oriental del Uruguay",
      "Союз Советских Социалистических Республик",
      "O‘zbekiston",
      "Ўзбекистон",
      "O'zbekstan",
      "uzbek",
      "new hebrides",
      "E Civitate Vaticana",
      "Holy See",
      "citta del vaticano",
      "Venezula",
      "Veitnam",
      "Vietman",
      "Việt Nam",
      "annam",
      "Al-Yaman",
      "اليمن",
      "Yugosav",
      "jugoslavija",
      "northern rhodesia",
      "rhodesia",
      "Ahvenanmaa",
      "Aland",
      "aslension island",
      "island of guernsey",
      "island of jersey",
      "bermudas",
      "BQ",
      "Porto Rico",
      "Puarto Rico",
      "porto rico",
      "pr",
      "northern marianas",
      "Kòrsou",
      "Curacao",
      "Las Malvinas",
      "Føroyar",
      "Færøerne",
      "faeroe islands",
      "aeroes",
      "faroes",
      "Guyane",
      "Polynésie française",
      "french oceania",
      "calpe",
      "Kalaallit Nunaat",
      "Grønland",
      "grønland",
      "gronland",
      "kalaallit nunaat",
      "Heung Gong",
      "香港",
      "Ellan Vannin",
      "macau",
      "Nouvelle-Calédonie",
      "Niuē",
      "Reunion",
      "St. Barthelemy",
      "St Barth",
      "SH",
      "Saint-Pierre et Miquelon",
      "Zhōnghuá Mínguó",
      "Táiwān",
      "中華民國",
      "臺灣/台灣",
      "台灣",
      "臺灣",
      "ROC",
      "Chinese Taipei",
      "eastern samoa",
      "Guåhån",
      "Wallis-et-Futuna",
      "Uvea mo Futuna",
      "IO British",
      "I.O.T.",
      "IOT",
      "فلسطين",
      "Virgina Islands",
      "BVI",
      "B.V.I",
      "american virgin islands",
      "spanish sahara",
      "لصحراء الغربية",
      "Argentine Antarctica",
      "Australian Antarctic Territory",
      "Chilean Antarctic Territory",
      "Adélie Land",
      "Ross Dependency",
      "Queen Maud Land",
      "Peter I Island",
      "Baffin Island",
      "Albion",
      "The Beautiful Country",
    ],
    "queryTokenizer": [Function],
  },
]
`;
